...
    }()
    let button: UIButton = {
        let button = UIButton()
        let imageButton = UIImage(named: "Exit")
        button.setImage(imageButton, for: .normal)
        button.translatesAutoresizingMaskIntoConstraints = false
        button.accessibilityIdentifier = "logout"
        button.addTarget(self, action: #selector(buttonTapped), for: .touchUpInside)
        return button
    }()
    let Colortext = UIColor(named: "YP White")
    
    private let token = OAuth2TokenStorage.shared
...
